--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "dependencies": {
     "lodash": "^4.17.21"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "jest": "^26.6.3",
+    "prettier": "2.2.1"
+  },
   "keywords": [],
   "description": "hexlet-js",
   "repository": {
